# cookiecutter_test_1

test_1/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
test_1/docs/: journey_log.md  mkdocs.yml
test_1/docs/docs/: index.md
test_1/gogo test/: __init__.py  dataset.py  features.py  plots.py
test_1/gogo test/modeling/: predict.py  train.py
test_1/gogo_test/: __init__.py  dataset.py  features.py  plots.py
test_1/gogo_test/modeling/: predict.py  train.py
test_1/models/: linear_regression_model.pkl
test_1/tests/: test_dataset.py  test_features.py  test_predict.py  test_train.py
